syntax = "proto3";

import "google/protobuf/timestamp.proto";

package auth;

option go_package = "pkg/auth";

service AuthService {
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message GetUserByIdRequest {
  string user_id = 1;
}

message GetUserByIdResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string user_id = 2;
  string username = 3;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
} 